# r-env

./: .gitignore  Cargo.toml  README.md
.github/workflows/: 10-create-release.yml
src/: app.rs  conf.rs  dotenv.rs  env.rs  main.rs
